--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         crossorigin="anonymous">
 
 </head>
-<body>
+<body style="padding-top: 60px">
   <app-root>Loading...</app-root>
 </body>
 </html>
