--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,14 @@
   <title>WebDev</title>
   <base href="/">
 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://use.fontawesome.com/cf2498cc5f.js"></script>
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-  <!--  Bootstrap CDN -->
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-
 </head>
-<body style="padding-top: 60px">
+<body>
   <app-root>Loading...</app-root>
 </body>
 </html>
