--- a/public/assignment/user/register.html
+++ b/public/assignment/user/register.html
@@ -8,7 +8,8 @@
     <link href="../css/style.css" rel="stylesheet"/>
 </head>
 <body>
-    <div class="container">
+    <div class="container centered-form">
+
         <h1>Register</h1>
 
         <label for="username">Username</label>
@@ -16,12 +17,16 @@
                id="username"
                class="form-control"
                placeholder="username"/>
+        <label for="password">Password</label>
         <input type="password"
+               id="password"
                class="form-control"
-               placeholder="password"/>
+               placeholder="asdk333"/>
+        <label for="veryfy-password">Veryfy password</label>
         <input type="password"
+               id="veryfy-password"
                class="form-control"
-               placeholder="very password"/>
+               placeholder="asdk333"/>
         <a class="btn btn-primary btn-block"
            href="profile.html">Register</a>
         <a class="btn btn-danger  btn-block"
