--- a/public/assignment/website/website-edit.html
+++ b/public/assignment/website/website-edit.html
@@ -17,7 +17,7 @@
             </a>
             <p class="navbar-text pull-right">
                 <a href="#" class="navbar-link">
-                    <span class="glyphicon glyphicon-plus"></span>
+                    <i class="fa fa-check" aria-hidden="true"></i>
                 </a>
             </p>
         </div>
