--- a/public/assignment/user/profile.html
+++ b/public/assignment/user/profile.html
@@ -6,27 +6,25 @@
     <title>Title</title>
     <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../css/style.css" rel="stylesheet"/>
+    <script src="https://use.fontawesome.com/cf2498cc5f.js"></script>
 </head>
 <body>
-
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-                Fixed Top
-            </a>
-            <p class="navbar-text pull-right">
-                <a href="#" class="navbar-link">
-                    <span class="glyphicon glyphicon-plus"></span>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                    Profile
                 </a>
-            </p>
+                <p class="navbar-text pull-right">
+                    <a href="#" class="navbar-link">
+                        <i class="fa fa-check" aria-hidden="true"></i>
+                    </a>
+                </p>
+            </div>
         </div>
-    </div>
-</nav>
-
-
+    </nav>
     <div class="container-fluid">
-        <form>
+        <form class="centered-form">
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" id="username" placeholder="Username">
@@ -45,38 +43,25 @@
             </div>
         </form>
 
-        <a class="btn btn-primary btn-block"
-           href="../website/website-list.html">Websites</a>
-        <a class="btn btn-danger  btn-block"
-           href="login.html">Logout</a>
-    </div>
+        <div class="centered-form">
+            <a class="btn btn-primary btn-block"
+            href="../website/website-list.html">Websites</a>
+            <a class="btn btn-danger  btn-block"
+            href="login.html">Logout</a>
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container">
-        <div class="row navbar-text">
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-ok"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-star"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-heart"></span>
-                </a>
-            </div>
         </div>
     </div>
-</nav>
 
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="align-to-right">
+                    <a href="#">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
