fixed css for website/

--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <script src="https://use.fontawesome.com/cf2498cc5f.js"></script>
     <link href="../css/style.css" rel="stylesheet"/>
 </head>
 <body>
@@ -13,7 +14,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                Fixed Top
+                Websites
             </a>
             <p class="navbar-text pull-right">
                 <a href="#" class="navbar-link">
@@ -26,78 +27,92 @@
 
 <div class="container-fluid">
     <ul class="list-group">
-
-        <li class="list-group-item active">
-            <div class="row">
-                <div class="col-lg-5 col-md-8 col-xs-11">
-                    Name
-                </div>
-                <div class="col-lg-3 visible-lg">
-                    Created
-                </div>
-                <div class="col-md-3 hidden-sm hidden-xs">
-                    Accessed
-                </div>
-                <div class="col-xs-1">
-
-                </div>
-            </div>
-        </li>
-
-
         <li class="list-group-item">
             <div class="row">
-                <div class="col-lg-5 col-md-8 col-xs-11">
+                <div class="col-8" style="float: left; margin: 0 30px 0 30px">
                     <a href="../page/page-list.html">
-                        Cras justo odio
+                        Address book app
                     </a>
                 </div>
-                <div class="col-lg-3 visible-lg">
-                    1/1/2017
-                </div>
-                <div class="col-md-3 hidden-sm hidden-xs">
-                    2/2/2017
-                </div>
-                <div class="col-xs-1">
+                <div class="col-4" style="float: right; margin: 0 30px 0 30px">
                     <a href="website-edit.html">
                         <span class="glyphicon glyphicon-cog pull-right"></span>
                     </a>
                 </div>
             </div>
         </li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Morbi leo risus</li>
-        <li class="list-group-item">Porta ac consectetur ac</li>
-        <li class="list-group-item">Vestibulum at eros</li>
+        <li class="list-group-item">
+            <div class="row">
+                <div class="col-8" style="float: left; margin: 0 30px 0 30px">
+                    <a href="../page/page-list.html">
+                        Personal blogger
+                    </a>
+                </div>
+                <div class="col-4" style="float: right; margin: 0 30px 0 30px">
+                    <a href="website-edit.html">
+                        <span class="glyphicon glyphicon-cog pull-right"></span>
+                    </a>
+                </div>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="row">
+                <div class="col-8" style="float: left; margin: 0 30px 0 30px">
+                    <a href="../page/page-list.html">
+                        what to eat app
+                    </a>
+                </div>
+                <div class="col-4" style="float: right; margin: 0 30px 0 30px">
+                    <a href="website-edit.html">
+                        <span class="glyphicon glyphicon-cog pull-right"></span>
+                    </a>
+                </div>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="row">
+                <div class="col-8" style="float: left; margin: 0 30px 0 30px">
+                    <a href="../page/page-list.html">
+                        path finder
+                    </a>
+                </div>
+                <div class="col-4" style="float: right; margin: 0 30px 0 30px">
+                    <a href="website-edit.html">
+                        <span class="glyphicon glyphicon-cog pull-right"></span>
+                    </a>
+                </div>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="row">
+                <div class="col-8" style="float: left; margin: 0 30px 0 30px">
+                    <a href="../page/page-list.html">
+                        Address book app
+                    </a>
+                </div>
+                <div class="col-4" style="float: right; margin: 0 30px 0 30px">
+                    <a href="website-edit.html">
+                        <span class="glyphicon glyphicon-cog pull-right"></span>
+                    </a>
+                </div>
+            </div>
+        </li>
     </ul>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container">
-        <div class="row navbar-text">
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-ok"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-star"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-heart"></span>
-                </a>
-            </div>
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <ul class="nav navbar-nav navbar-right">
+                <li style="float: right; margin-right: 30px">
+                    <a href="#">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                    </a>
+                </li>
+            </ul>
+
         </div>
     </div>
 </nav>
-
 </body>
 </html>
