--- a/public/assignment/website/website-new.html
+++ b/public/assignment/website/website-new.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                Edit Website
+                New Website
             </a>
             <p class="navbar-text pull-right">
                 <a href="#" class="navbar-link">
@@ -115,8 +115,6 @@
                       rows="5"
                       placeholder="So big it is its own country"
                       class="form-control">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </textarea>
-
-            <a href="website-list.html" class="btn btn-block btn-danger">Delete</a>
         </div>
     </div>
 
