--- a/public/assignment/website/website-edit.html
+++ b/public/assignment/website/website-edit.html
@@ -13,11 +13,14 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
+            <a class="navbar-brand" href="website-list.html">
+                <i class="fa fa-arrow-left" aria-hidden="true"></i>
+            </a>
             <a class="navbar-brand" href="#">
                 Edit Website
             </a>
             <p class="navbar-text pull-right">
-                <a href="#" class="navbar-link">
+                <a href="website-list.html" class="navbar-link">
                     <i class="fa fa-check" aria-hidden="true"></i>
                 </a>
             </p>
@@ -127,7 +130,7 @@
     <div class="container">
         <ul class="nav navbar-nav navbar-right">
             <li class="align-to-right">
-                <a href="#">
+                <a href="../user/profile.html">
                     <i class="fa fa-user" aria-hidden="true"></i>
                 </a>
             </li>
