--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -13,11 +13,14 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
+            <a class="navbar-brand" href="../user/profile.html">
+                <i class="fa fa-arrow-left" aria-hidden="true"></i>
+            </a>
             <a class="navbar-brand" href="#">
                 Websites
             </a>
             <p class="navbar-text pull-right">
-                <a href="#" class="navbar-link">
+                <a href="website-new.html" class="navbar-link">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </p>
@@ -105,7 +108,7 @@
         <div class="navbar-header">
             <ul class="nav navbar-nav navbar-right">
                 <li style="float: right; margin-right: 30px">
-                    <a href="#">
+                    <a href="../user/profile.html">
                         <i class="fa fa-user" aria-hidden="true"></i>
                     </a>
                 </li>
