--- a/public/assignment/widget/widget-heading.html
+++ b/public/assignment/widget/widget-heading.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <script src="https://use.fontawesome.com/cf2498cc5f.js"></script>
     <link href="../css/style.css" rel="stylesheet"/>
+    <script src="https://use.fontawesome.com/cf2498cc5f.js"></script>
 </head>
 <body>
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="">
+            <a class="navbar-brand" href="widget-list.html">
                 <i class="fa fa-arrow-left" aria-hidden="true"></i>
             </a>
             <a class="navbar-brand" href="#">
-                Fixed Top
+                Heading Editor
             </a>
             <p class="navbar-text pull-right">
-                <a href="page-list.html" class="navbar-link">
+                <a href="widget-list.html" class="navbar-link">
                     <span class="glyphicon glyphicon-ok"></span>
                 </a>
             </p>
@@ -28,27 +28,40 @@
     </div>
 </nav>
 
-<div class="container">
-    <div class="row">
-        <label for="name">Name</label>
-        <input class="form-control"
-               placeholder="facebook"
-               value="Blogger"
-               id="name"/>
+<div class="container-fluid">
 
-        <label for="description">Description</label>
-        <textarea id="description"
-                  rows="5"
-                  placeholder="So big it is its own country"
-                  class="form-control">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </textarea>
-    </div>
+    <label for="name">Name</label>
+    <input class="form-control"
+           placeholder="facebook"
+           value="top heading"
+           id="name"/>
+
+    <label for="text">Text</label>
+    <input class="form-control"
+           placeholder="facebook"
+           value="US Senate Reaches Compromise"
+           id="text"/>
+
+    <label for="size">Size</label>
+    <select id="size" class="form-control">
+        <option>1 (X-Large)</option>
+        <option>2 (Larger)</option>
+        <option>3 (Large)</option>
+        <option>4 (Medium)</option>
+        <option>5 (Small)</option>
+        <option>6 (Smallest)</option>
+    </select>
+
+    <a href="widget-list.html" class="btn btn-block btn-danger">Delete</a>
+
 </div>
+
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
         <ul class="nav navbar-nav navbar-right">
             <li class="align-to-right">
-                <a href="../user/profile.html">
+                <a href="#">
                     <i class="fa fa-user" aria-hidden="true"></i>
                 </a>
             </li>
