--- a/public/assignment/widget/widget-image.html
+++ b/public/assignment/widget/widget-image.html
@@ -6,14 +6,18 @@
     <title>Title</title>
     <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../css/style.css" rel="stylesheet"/>
+    <script src="https://use.fontawesome.com/cf2498cc5f.js"></script>
 </head>
 <body>
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
+            <a class="navbar-brand" href="widget-list.html">
+                <i class="fa fa-arrow-left" aria-hidden="true"></i>
+            </a>
             <a class="navbar-brand" href="#">
-                Heading Editor
+                Image Editor
             </a>
             <p class="navbar-text pull-right">
                 <a href="widget-list.html" class="navbar-link">
@@ -38,46 +42,28 @@
            value="US Senate Reaches Compromise"
            id="text"/>
 
-    <label for="size">Size</label>
-    <select id="size" class="form-control">
-        <option>1 (X-Large)</option>
-        <option>2 (Larger)</option>
-        <option>3 (Large)</option>
-        <option>4 (Medium)</option>
-        <option>5 (Small)</option>
-        <option>6 (Smallest)</option>
-    </select>
+    <label for="file">Upload</label>
+    <input id="file" multiple type="file" class="form-control"/>
 
-    <a href="widget-list.html" class="btn btn-block btn-danger">Delete</a>
+    <a href=""
+       class="btn btn-block btn-success">Upload</a>
+
+    <a href="widget-list.html"
+       class="btn btn-block btn-danger">Delete</a>
 
 </div>
 
+
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
-        <div class="row navbar-text">
-            <div class="col-xs-3 text-center">
+        <ul class="nav navbar-nav navbar-right">
+            <li class="align-to-right">
                 <a href="#">
-                    <span class="glyphicon glyphicon-ok"></span>
+                    <i class="fa fa-user" aria-hidden="true"></i>
                 </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-star"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-heart"></span>
-                </a>
-            </div>
-        </div>
+            </li>
+        </ul>
     </div>
 </nav>
-
 </body>
 </html>
