--- a/public/assignment/widget/widget-list.html
+++ b/public/assignment/widget/widget-list.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <script src="https://use.fontawesome.com/cf2498cc5f.js"></script>
     <link href="../css/style.css" rel="stylesheet"/>
 </head>
 <body>
@@ -12,11 +13,14 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
+            <a class="navbar-brand" href="../page/page-list.html">
+                <i class="fa fa-arrow-left" aria-hidden="true"></i>
+            </a>
             <a class="navbar-brand" href="#">
                 Widget List
             </a>
             <p class="navbar-text pull-right">
-                <a href="#" class="navbar-link">
+                <a href="widget-chooser.html" class="navbar-link">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </p>
@@ -27,7 +31,7 @@
 <div class="container-fluid">
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
-            <a href="widget-heading-edit.html">
+            <a href="widget-heading.html">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <span class="glyphicon glyphicon-align-justify"></span>
@@ -45,7 +49,7 @@
     </div>
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
-            <a href="widget-image-edit.html">
+            <a href="widget-image.html">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <span class="glyphicon glyphicon-align-justify"></span>
@@ -64,7 +68,9 @@
     </div>
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
-            <span class="glyphicon glyphicon-cog"></span>
+            <a href="widget-youtube.html">
+                <span class="glyphicon glyphicon-cog"></span>
+            </a>
             <span class="glyphicon glyphicon-align-justify"></span>
         </div>
 
@@ -75,28 +81,13 @@
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
-        <div class="row navbar-text">
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-ok"></span>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="align-to-right">
+                <a href="../user/profile.html">
+                    <i class="fa fa-user" aria-hidden="true"></i>
                 </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-star"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-heart"></span>
-                </a>
-            </div>
-        </div>
+            </li>
+        </ul>
     </div>
 </nav>
 
