--- a/public/assignment/widget/widget-youtube.html
+++ b/public/assignment/widget/widget-youtube.html
@@ -6,14 +6,18 @@
     <title>Title</title>
     <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../css/style.css" rel="stylesheet"/>
+    <script src="https://use.fontawesome.com/cf2498cc5f.js"></script>
 </head>
 <body>
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
+            <a class="navbar-brand" href="widget-list.html">
+                <i class="fa fa-arrow-left" aria-hidden="true"></i>
+            </a>
             <a class="navbar-brand" href="#">
-                Image Editor
+                Widget Edit
             </a>
             <p class="navbar-text pull-right">
                 <a href="widget-list.html" class="navbar-link">
@@ -38,43 +42,29 @@
            value="US Senate Reaches Compromise"
            id="text"/>
 
-    <label for="file">Upload</label>
-    <input id="file" multiple type="file" class="form-control"/>
+    <label for="URL">URL</label>
+    <input class="form-control"
+           id="URL"
+           placeholder="www.google.com" />
 
-    <a href=""
-       class="btn btn-block btn-success">Upload</a>
+    <label for="width">URL</label>
+    <input class="form-control"
+           id="width"
+           placeholder="32px" />
 
-    <a href="widget-list.html"
-       class="btn btn-block btn-danger">Delete</a>
-
+    <a href="widget-list.html" class="btn btn-block btn-danger">Delete</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
-        <div class="row navbar-text">
-            <div class="col-xs-3 text-center">
+        <ul class="nav navbar-nav navbar-right">
+            <li class="align-to-right">
                 <a href="#">
-                    <span class="glyphicon glyphicon-ok"></span>
+                    <i class="fa fa-user" aria-hidden="true"></i>
                 </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-star"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-heart"></span>
-                </a>
-            </div>
-        </div>
+            </li>
+        </ul>
     </div>
 </nav>
-
 </body>
 </html>
