--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -32,70 +32,70 @@
     <ul class="list-group">
         <li class="list-group-item">
             <div class="row">
-                <div class="col-8" style="float: left; margin: 0 30px 0 30px">
+                <div class="col-8 edit-items" >
                     <a href="../page/page-list.html">
                         Address book app
                     </a>
                 </div>
-                <div class="col-4" style="float: right; margin: 0 30px 0 30px">
+                <div class="col-4 edit-items pull-right" >
                     <a href="website-edit.html">
-                        <span class="glyphicon glyphicon-cog pull-right"></span>
+                        <span class="glyphicon glyphicon-cog"></span>
                     </a>
                 </div>
             </div>
         </li>
         <li class="list-group-item">
             <div class="row">
-                <div class="col-8" style="float: left; margin: 0 30px 0 30px">
+                <div class="col-8 edit-items" >
                     <a href="../page/page-list.html">
                         Personal blogger
                     </a>
                 </div>
-                <div class="col-4" style="float: right; margin: 0 30px 0 30px">
+                <div class="col-4 edit-items pull-right" >
                     <a href="website-edit.html">
-                        <span class="glyphicon glyphicon-cog pull-right"></span>
+                        <span class="glyphicon glyphicon-cog"></span>
                     </a>
                 </div>
             </div>
         </li>
         <li class="list-group-item">
             <div class="row">
-                <div class="col-8" style="float: left; margin: 0 30px 0 30px">
+                <div class="col-8 edit-items">
                     <a href="../page/page-list.html">
                         what to eat app
                     </a>
                 </div>
-                <div class="col-4" style="float: right; margin: 0 30px 0 30px">
+                <div class="col-4 edit-items pull-right" >
                     <a href="website-edit.html">
-                        <span class="glyphicon glyphicon-cog pull-right"></span>
+                        <span class="glyphicon glyphicon-cog"></span>
                     </a>
                 </div>
             </div>
         </li>
         <li class="list-group-item">
             <div class="row">
-                <div class="col-8" style="float: left; margin: 0 30px 0 30px">
+                <div class="col-8 edit-items">
                     <a href="../page/page-list.html">
                         path finder
                     </a>
                 </div>
-                <div class="col-4" style="float: right; margin: 0 30px 0 30px">
+                <div class="col-4 edit-items pull-right">
                     <a href="website-edit.html">
-                        <span class="glyphicon glyphicon-cog pull-right"></span>
+                        <span class="glyphicon glyphicon-cog"></span>
                     </a>
                 </div>
             </div>
         </li>
         <li class="list-group-item">
             <div class="row">
-                <div class="col-8" style="float: left; margin: 0 30px 0 30px">
+                <div class="col-8 edit-items">
                     <a href="../page/page-list.html">
                         Address book app
                     </a>
                 </div>
-                <div class="col-4" style="float: right; margin: 0 30px 0 30px">
+                <div class="col-4 edit-items pull-right">
                     <a href="website-edit.html">
-                        <span class="glyphicon glyphicon-cog pull-right"></span>
+                        <span class="glyphicon glyphicon-cog"></span>
                     </a>
                 </div>
             </div>
