--- a/public/assignment/widget/widget-heading.html
+++ b/public/assignment/widget/widget-heading.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-light navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="widget-list.html">
@@ -57,7 +57,7 @@
 </div>
 
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
+<nav class="navbar navbar-light navbar-fixed-bottom">
     <div class="container">
         <ul class="nav navbar-nav navbar-right">
             <li class="align-to-right">
