modify bot nav bar

--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -105,16 +105,11 @@
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <ul class="nav navbar-nav navbar-right">
-                <li style="float: right; margin-right: 30px">
-                    <a href="../user/profile.html">
-                        <i class="fa fa-user" aria-hidden="true"></i>
-                    </a>
-                </li>
-            </ul>
-
-        </div>
+        <p class="navbar-text pull-right">
+            <a href="../user/profile.html">
+                <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+            </a>
+        </p>
     </div>
 </nav>
 </body>
