--- a/public/assignment/user/profile.html
+++ b/public/assignment/user/profile.html
@@ -53,14 +53,12 @@
     </div>
 
     <nav class="navbar navbar-default navbar-fixed-bottom">
-        <div class="container">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="align-to-right">
-                    <a href="#">
-                        <i class="fa fa-user" aria-hidden="true"></i>
-                    </a>
-                </li>
-            </ul>
+        <div class="container-fluid">
+            <p class="navbar-text pull-right">
+                <a href="../user/profile.html">
+                    <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+                </a>
+            </p>
         </div>
     </nav>
 </body>
