--- a/public/assignment/widget/widget-list.html
+++ b/public/assignment/widget/widget-list.html
@@ -80,16 +80,13 @@
 </div>
 
 <nav class="navbar navbar-light navbar-fixed-bottom">
-    <div class="container">
-        <ul class="nav navbar-nav navbar-right">
-            <li class="align-to-right">
-                <a href="../user/profile.html">
-                    <i class="fa fa-user" aria-hidden="true"></i>
-                </a>
-            </li>
-        </ul>
+    <div class="container-fluid">
+        <p class="navbar-text pull-right">
+            <a href="../user/profile.html">
+                <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+            </a>
+        </p>
     </div>
 </nav>
-
 </body>
 </html>
