--- a/public/assignment/widget/widget-youtube.html
+++ b/public/assignment/widget/widget-youtube.html
@@ -55,15 +55,13 @@
     <a href="widget-list.html" class="btn btn-block btn-danger">Delete</a>
 </div>
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container">
-        <ul class="nav navbar-nav navbar-right">
-            <li class="align-to-right">
-                <a href="#">
-                    <i class="fa fa-user" aria-hidden="true"></i>
-                </a>
-            </li>
-        </ul>
+<nav class="navbar navbar-light navbar-fixed-bottom">
+    <div class="container-fluid">
+        <p class="navbar-text pull-right">
+            <a href="../user/profile.html">
+                <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+            </a>
+        </p>
     </div>
 </nav>
 </body>
