--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -1,44 +1,31 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="WebAppMaker">
 <head>
+
+    <!--To be changed to CDN-->
+    <script src="../../node_modules/angular/angular.min.js"></script>
+    <script src="../../node_modules/angular-route/angular-route.min.js"></script>
+    <script src="app.js"></script>
+    <script src="config.js"></script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <meta name="author" content="Linghan Xing">
 
-    <title>Theme Template for Bootstrap</title>
+
+    <title>Web App AngularJS</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-<div class="container">
-    <div class="row">
-        <h1>
-            Project status: assignment 2, static web pages and css
-        </h1>
+    <div ng-view>
+        Loading...
     </div>
-
-    <div class="row">
-        <p>
-            Please choose from the following web pages:
-        </p>
-    </div>
-
-    <div class="row">
-        <ul>
-            <li> <a href="./page/page-list.html">Page List</a> </li>
-            <li> <a href="./user/index.html">User</a> </li>
-            <li> <a href="./website/website-list.html">Website List</a> </li>
-            <li> <a href="./widget/widget-list.html">Widget List</a> </li>
-        </ul>
-    </div>
-
-</div>
 </body>
 </html>
