--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -8,6 +8,14 @@
     <script src="app.js"></script>
     <script src="config.js"></script>
 
+    <script src="views/user/controllers/login.controller.client.js"></script>
+    <script src="views/user/controllers/profile.controller.client.js"></script>
+    <script src="views/user/controllers/register.controller.client.js"></script>
+
+    <!--services-->
+    <script src="services/user.service.client.js"></script>
+
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
