--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -8,12 +8,18 @@
     <script src="app.js"></script>
     <script src="config.js"></script>
 
+    <!--User controllers-->
     <script src="views/user/controllers/login.controller.client.js"></script>
     <script src="views/user/controllers/profile.controller.client.js"></script>
     <script src="views/user/controllers/register.controller.client.js"></script>
 
+    <!--Website controllers-->
+    <script src="views/website/controllers/website-list.controller.client.js"></script>
+    <script src="views/website/controllers/website-edit.controller.client.js"></script>
+
     <!--services-->
     <script src="services/user.service.client.js"></script>
+    <script src="services/website.service.client.js"></script>
 
 
     <meta charset="utf-8">
