--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -31,6 +31,8 @@
 
     <!--Page controllers-->
     <script src="views/page/controllers/page-list.controller.client.js"></script>
+    <script src="views/page/controllers/page-new.controller.client.js"></script>
+    <script src="views/page/controllers/page-edit.controller.client.js"></script>
 
     <!--services-->
     <script src="services/user.service.client.js"></script>
