--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -12,8 +12,11 @@
 
     <!-- AngularJS -->
     <!--To be changed to CDN-->
-    <script src="../../node_modules/angular/angular.min.js"></script>
-    <script src="../../node_modules/angular-route/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
+
+    <!--<script src="../../node_modules/angular/angular.min.js"></script>-->
+    <!--<script src="../../node_modules/angular-route/angular-route.min.js"></script>-->
 
     <!--Angular App-->
     <script src="app.js"></script>
