--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -20,12 +20,19 @@
 
     <!--Angular App-->
     <script src="app.js"></script>
+
+    <!--routing config-->
+    <script src="views/user/user-config.js"></script>
+    <script src="views/page/page-config.js"></script>
+    <script src="views/website/website-config.js"></script>
+    <script src="views/widget/widget-config.js"></script>
     <script src="config.js"></script>
 
     <!--User controllers-->
     <script src="views/user/controllers/login.controller.client.js"></script>
     <script src="views/user/controllers/profile.controller.client.js"></script>
     <script src="views/user/controllers/register.controller.client.js"></script>
+
 
     <!--Website controllers-->
     <script src="views/website/controllers/website-list.controller.client.js"></script>
