Initial release candidate for assignment 4

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -12,11 +12,11 @@
 
     <!-- AngularJS -->
     <!--To be changed to CDN-->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>-->
+    <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>-->
 
-    <!--<script src="../../node_modules/angular/angular.min.js"></script>-->
-    <!--<script src="../../node_modules/angular-route/angular-route.min.js"></script>-->
+    <script src="/node_modules/angular/angular.min.js"></script>
+    <script src="/node_modules/angular-route/angular-route.min.js"></script>
 
     <!--Angular App-->
     <script src="app.js"></script>
@@ -55,6 +55,7 @@
     <script src="services/page.service.client.js"></script>
     <script src="services/widget.service.client.js"></script>
 
+    <!-- Jasmine -->
 
     <!--Boostrap CSS-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
