Implemented sortable directive

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -7,16 +7,24 @@
     <meta name="description" content="">
     <meta name="author" content="Linghan Xing">
 
+
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Web App AngularJS</title>
+
+    <!--JQuery and JQueryUI-->
+    <script src="../vendor/jquery.js"></script>
+    <script src="../vendor/jquery-ui.min.js"></script>
+
+    <!--JQuery UI-->
+    <link rel="stylesheet" href="../vendor/jquery-ui.min.css">
 
     <!-- AngularJS -->
     <!--To be changed to CDN-->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>-->
     <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>-->
 
-    <script src="/node_modules/angular/angular.min.js"></script>
-    <script src="/node_modules/angular-route/angular-route.min.js"></script>
+    <script src="../../node_modules/angular/angular.min.js"></script>
+    <script src="../../node_modules/angular-route/angular-route.min.js"></script>
 
     <!--Angular App-->
     <script src="app.js"></script>
@@ -55,6 +63,9 @@
     <script src="services/page.service.client.js"></script>
     <script src="services/widget.service.client.js"></script>
 
+    <!--directives-->
+    <script src="directives/webdevSortable.js"></script>
+
     <!-- Jasmine -->
 
     <!--Boostrap CSS-->
@@ -64,6 +75,7 @@
 
     <!--Font awesome icons-->
     <script src="https://use.fontawesome.com/cf2498cc5f.js"></script>
+
 </head>
 
 <body>
