--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -18,6 +18,7 @@
     <!--JQuery UI-->
     <link rel="stylesheet" href="../vendor/jquery-ui.min.css">
 
+
     <!-- AngularJS -->
     <!--To be changed to CDN-->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>-->
@@ -28,6 +29,12 @@
 
     <!--Angular App-->
     <script src="app.js"></script>
+
+    <!-- TextAngular -->
+    <link rel="stylesheet" href="../../node_modules/textangular/dist/textAngular.css">
+    <script src="../../node_modules/textangular/dist/textAngular-rangy.min.js"></script>
+    <script src="../../node_modules/textangular/dist/textAngular-sanitize.min.js"></script>
+    <script src="../../node_modules/textangular/dist/textAngular.min.js"></script>
 
     <!--routing config-->
     <script src="views/user/user-config.js"></script>
