Facebook OAuth successful 1

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -71,6 +71,7 @@
     <script src="services/page.service.client.js"></script>
     <script src="services/widget.service.client.js"></script>
     <script src="services/flickr.service.client.js"></script>
+    <script src="services/authenticate.service.client.js"></script>
 
     <!--directives-->
     <script src="directives/webdevSortable.js"></script>
